Updated upper area

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                      </h2>
 
                         </div>
-                    <a href="#" class="view-github">VIEW ON GITHUB</a>
+                    <a href="http://github.com/seatgeek/hell" class="view-github">VIEW ON GITHUB</a>
                      <div class="made-by">
-                         <img src="images/made.png" alt="image" />
+                         <a href="http://seatgeek.com/"><img src="images/made.png" alt="image" /></a>
                      </div> 
                     </div>
             </div>
@@ -40,16 +40,16 @@ sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris
 accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  
 mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent.</p>
                             </div>
-                            
+
                         </li>
                         <li>
                             <span>How do I use it?</span>
                             <div class="right-div">
                                 <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. 
 Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis </p>
-                                <img src="images/img-1.jpg" alt="image" class="made-by"/>
+                                <img src="images/img-1.jpg" alt="image" />
                             </div>
-                            
+
                         </li>
                     </ul>
                 </div>
