Ready for Mr. Jose to add content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Hell</title>
         <link href="stylesheets/style.css" rel="stylesheet" type="text/css"  />
         <link href="stylesheets/css3.css" rel="stylesheet" type="text/css"  />
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,200,700' rel='stylesheet' type='text/css'>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+        <script src="javascripts/main.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -15,16 +18,16 @@
 					 <img src="images/flame-5.png" alt="image" class="flame5"/>
 					 <img src="images/flame-6.png" alt="image" class="flame6"/>
                      <img src="images/flame-4.png" alt="image" class="flame4"/>
-                    <a href="#" class="logo"></a>
+                    <a id="one" style="display: none;" href="#" class="logo"></a>
                     <div class="heading">
-                    <h2>
+                    <h2 id="two" style="display: none;">
                          A web UI for Capistrano. JSON API included, free of charge.
                      </h2>
 
                         </div>
-                    <a href="http://github.com/seatgeek/hell" class="view-github">VIEW ON GITHUB</a>
+                    <a id="three" style="opacity: none; opacity: 0; top: 185px;" href="http://github.com/seatgeek/hell" class="view-github">VIEW ON GITHUB</a>
                      <div class="made-by">
-                         <a href="http://seatgeek.com/"><img src="images/made.png" alt="image" /></a>
+                         <a href="http://seatgeek.com/"><img id="four" style="opacity: none; opacity: 0; bottom: 26px;" src="images/made.png" alt="image" /></a>
                      </div> 
                     </div>
             </div>
