A few visual tweaks

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         <div id="outer_wrapper">
             <div class="header">
                 <div class="wrapper head">
-                     <img src="images/flame-3.png" alt="image" class="flame3"/>
-					 <img src="images/flame-5.png" alt="image" class="flame5"/>
-					 <img src="images/flame-6.png" alt="image" class="flame6"/>
-                     <img src="images/flame-4.png" alt="image" class="flame4"/>
+                    <img src="images/flames.png" alt="image" class="flames"/>
                     <a id="one" style="display: none;" href="#" class="logo"></a>
                     <div class="heading">
                     <h2 id="two" style="display: none;">
@@ -27,7 +24,7 @@
                         </div>
                     <a id="three" style="opacity: none; opacity: 0; top: 185px;" href="http://github.com/seatgeek/hell" class="view-github">VIEW ON GITHUB</a>
                      <div class="made-by">
-                         <a href="http://seatgeek.com/"><img id="four" style="opacity: none; opacity: 0; bottom: 26px;" src="images/made.png" alt="image" /></a>
+                         <a href="http://seatgeek.com/"><img id="four" style="opacity: none; opacity: 0; bottom: 17px;" src="images/made.png" alt="image" /></a>
                      </div> 
                     </div>
             </div>
